[project]
name = "suntimes-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "GreyAudron",email = "mikhail.schee@mail.utoronto.ca"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "suntimes_streamlit", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
